[package]
name = "yuricypher"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
rust-i18n = "3.1.1"
base64 = "0.22.1"
base32 = "0.5.1"
data-encoding = "2.6.0"
idna = "1.0.3"
md-5 = "0.10.6"
sha2 = "0.10.8"
hex = "0.4.3"
itertools = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
env_logger = "0.11.8"
rand = "0.9.2"
aes = "0.8.4"
cbc = "0.1.2"
